Added Some Logics

--- a/Epsiode - 1/helloWorldReact.html
+++ b/Epsiode - 1/helloWorldReact.html
@@ -7,7 +7,17 @@
     <title>Learning React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="top">
+      <h1>This is the top heading</h1>
+    </div>
+    <div id="root">
+      <h1>My name is Manoj.</h1>
+    </div>
+
+    <div id="bottom">
+      <h1>This is the bottom heading</h1>
+    </div>
+
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
