Added Parcel Related Stuff

--- a/Epsiode - 1/helloWorldReact.html
+++ b/Epsiode - 1/helloWorldReact.html
@@ -18,15 +18,6 @@
       <h1>This is the bottom heading</h1>
     </div>
 
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-
-    <script src="./NestedApp.js"></script>
+    <script type="module" src="./NestedApp.js"></script>
   </body>
 </html>
