Added Eposide-3 Content

--- a/Epsiode - 1/index.html
+++ b/Epsiode - 1/index.html
@@ -7,17 +7,10 @@
     <title>Learning React</title>
   </head>
   <body>
-    <div id="top">
-      <h1>This is the top heading</h1>
-    </div>
     <div id="root">
       <h1>My name is Manoj.</h1>
     </div>
 
-    <div id="bottom">
-      <h1>This is the bottom heading</h1>
-    </div>
-
-    <script type="module" src="./NestedApp.js"></script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
