Added Props Related

--- a/Epsiode - 1/index.html
+++ b/Epsiode - 1/index.html
@@ -7,10 +7,8 @@
     <title>Learning React</title>
   </head>
   <body>
-    <div id="root">
-      <h1>My name is Manoj.</h1>
-    </div>
+    <div id="root"></div>
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./AppContainer.js"></script>
   </body>
 </html>
